--- a/public/502.html
+++ b/public/502.html
@@ -2,7 +2,7 @@
 <p>We are upgrading the server. This *should* only takes a few minutes...</p>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-2359053-103"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=<tag-here>"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
